fix(style): cloud docs alignment (#2226)
* fix: classname conlict

* fix: feedback responsive style

* fix: hide scarf img

* fix: move under main

--- a/src/components/FeedbackForm/index.module.css
+++ b/src/components/FeedbackForm/index.module.css
@@ -31,7 +31,6 @@
   margin-top: 4px !important;
   display: flex;
   flex-direction: row;
-  margin-left: 0 !important;
 }
 
 .rightGroupButton {
@@ -97,9 +96,14 @@ p.rightText {
 }
 
 @media screen and (max-width: 540px) {
+  div.rightGroupContainer {
+    justify-content: center;
+  }
+  
   div.rightGroup {
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
+    justify-content: center;
   }
 
   .rightGroupButtonGroup {
@@ -115,12 +119,26 @@ p.rightText {
   .breakLine {
     width: 100%;
   }
+
+  p.rightText {
+    margin: 0 auto;
+    text-align: center;
+  }
+
+  .rightGroupButtonGroup {
+    justify-content: center;
+  }
+
+  button.footerButton {
+    font-size: x-small;
+  }
 }
 
 @media screen and (max-width: 350px) {
   .rightGroupButtonGroup {
     flex-direction: row;
     align-items: flex-start;
+    justify-content: center;
   }
 }
 
