--- a/src/theme/DocPage/Layout/Main/styles.module.css
+++ b/src/theme/DocPage/Layout/Main/styles.module.css
@@ -18,3 +18,8 @@
     max-width: calc(var(--ifm-container-width) + var(--doc-sidebar-width)) !important;
   }
 }
+
+
+.scarfHidden {
+  display: none;
+}
