--- a/src/theme/NotifyButton/style.css
+++ b/src/theme/NotifyButton/style.css
@@ -9,7 +9,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
 }
 
 .uppercase {
